--- a/Automob-mechanic web app using html/appointment.html
+++ b/Automob-mechanic web app using html/appointment.html
@@ -50,7 +50,7 @@
             <label for="address">Address:</label><br>
             <textarea id="address" name="address" rows="4" cols="40" required></textarea>
             <br><br>
-            <button type="submit">Book</a></button>
+            <button type="submit">Book</button>
         </form>
     </main>
     <br><br><br><br>
